Fix leak bug 87040 (and related assertions) by noting that nsImageBoxFrame is a leaf so we shouldn't try to give it children that get dropped on the floor and leak other things that they own.  r=waterson, pavlov  sr=hyatt